<?xml version="1.0"?>
<package format="3">
  <name>hybrid_astar_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for Hybrid A* planner demo</description>
  <maintainer email="anmolsureka@example.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hybrid_astar_planner</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
