<?xml version="1.0"?>
<package format="3">
  <name>hybrid_astar_description</name>
  <version>1.0.0</version>
  <description>URDF model for Ackermann vehicle used with Hybrid A* planner</description>
  <maintainer email="anmolsureka@example.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
