<?xml version="1.0"?>
<package format="3">
  <name>hybrid_astar_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation worlds and launch for Hybrid A* planner</description>
  <maintainer email="anmolsureka@example.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>hybrid_astar_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
