<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybrid_astar_planner</name>
  <version>1.0.0</version>
  <description>
    Hybrid A* global path planner plugin for Nav2.
    Implements cost-aware traversal, OMPL Reeds-Shepp analytical expansion,
    and max(RS, 2D Dijkstra) admissible heuristic for non-holonomic vehicles.
  </description>
  <maintainer email="anmolsureka@example.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>libompl-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/hybrid_astar_planner_plugin.xml" />
  </export>
</package>
