<?xml version="1.0"?>
<package format="3">
  <name>hybrid_astar_planner</name>
  <version>0.1.0</version>
  <description>Hybrid A* path planner ROS 2 node</description>
  <maintainer email="anmolsureka006@gmail.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>av_planner_interfaces</depend>
  <depend>planner_common</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
