<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt_planner</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for RRT* family planners (RRT*, Informed RRT*, BI-RRT*)</description>
  <maintainer email="anmolsureka006@gmail.com">Anmol Sureka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>av_planner_interfaces</depend>
  <depend>planner_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
